syntax = "proto3";

package photos_ng.api.v1.grpc;

import "google/protobuf/timestamp.proto";

option go_package = "git.tls.tupangiu.ro/cosmin/photos-ng/api/v1/grpc";

// Java options for Android
option java_package = "ro.tupangiu.tls.photosng.grpc";
option java_outer_classname = "CommonProto";

// Common error message structure
message Error {
  string message = 1;
  string code = 2;
  map<string, string> details = 3;
}

// EXIF header for media metadata
message ExifHeader {
  string key = 1;
  string value = 2;
}

// Pagination parameters
message PaginationRequest {
  int32 limit = 1;   // Maximum number of items to return (default: 20, max: 100)
  int32 offset = 2;  // Number of items to skip (default: 0)
}

// Pagination response metadata
message PaginationResponse {
  int32 total = 1;   // Total number of items available
  int32 limit = 2;   // Number of items returned in this response
  int32 offset = 3;  // Number of items skipped
}

// Media type enumeration
enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  MEDIA_TYPE_PHOTO = 1;
  MEDIA_TYPE_VIDEO = 2;
}

// Sort order enumeration
enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

// Media sort field enumeration
enum MediaSortBy {
  MEDIA_SORT_BY_UNSPECIFIED = 0;
  MEDIA_SORT_BY_CAPTURED_AT = 1;
  MEDIA_SORT_BY_FILENAME = 2;
  MEDIA_SORT_BY_TYPE = 3;
}

// Sync job status enumeration
enum SyncJobStatus {
  SYNC_JOB_STATUS_UNSPECIFIED = 0;
  SYNC_JOB_STATUS_PENDING = 1;
  SYNC_JOB_STATUS_RUNNING = 2;
  SYNC_JOB_STATUS_COMPLETED = 3;
  SYNC_JOB_STATUS_FAILED = 4;
  SYNC_JOB_STATUS_STOPPED = 5;
}

// Task result item type enumeration  
enum TaskResultItemType {
  TASK_RESULT_ITEM_TYPE_UNSPECIFIED = 0;
  TASK_RESULT_ITEM_TYPE_FILE = 1;
  TASK_RESULT_ITEM_TYPE_FOLDER = 2;
}

// Task result status
message TaskResultStatus {
  oneof result {
    string success = 1;  // "ok" for successful processing
    string error = 2;    // Error message if processing failed
  }
}
